--- a/playbook-windows_gather_facts02.yml
+++ b/playbook-windows_gather_facts02.yml
@@ -8,5 +8,7 @@
   
     - name: What did gather_facts return?
       ansible.builtin.debug:
-        var: ansible_facts.interfaces # just "ansible_distribution" also works
-
+        msg: 
+          - "{{ ansible_facts.interfaces }}"
+          - "{{ ansible_facts.processor }}"
+          - "{{ ansible_facts.memtotal_mb }}"
